--- a/views/index.erb
+++ b/views/index.erb
@@ -7,8 +7,8 @@
 	</head>
  
 	<body>
-		<div class="text">This Application runs on </div>
-		<div class="highlighted"><%= cpu %></div>
-		<div class="text">processor architecture</div>
+		<div class="text">This App Runs On </div>
+		<div class="highlighted">(<%= cpu %>)</div>
+		<div class="text">architecture</div>
 	</body>
 </html>
