--- a/views/index.erb
+++ b/views/index.erb
@@ -6,9 +6,9 @@
 		<link rel="stylesheet" href="application.css" type="text/css" />
 	</head>
  
-	<body>
-		<div class="text">This App Runs On </div>
-		<div class="highlighted">(<%= cpu %>)</div>
-		<div class="text">architecture</div>
+	<body class='dark'>
+		<div class="text monospace-font">This App Runs On </div>
+		<div class="highlighted future-font">(<%= cpu %>)</div>
+		<div class="text monospace-font">architecture</div>
 	</body>
 </html>
